tdf#95648: Erase the OpenGLCompatibleDC to white before drawing text into it

For some reason this is needed in the case of GraphiteWinLayout and
OpenGL. Otherwise when a space glyph is "drawn" into a space that is
wider than the nominal width of the space glyph, we get two black
rectangles surrounding the white space "glyph".

Change-Id: Ifb4ea00d9e5f078518ac97d7dd18694088aa1cdf